[metadata]
name = wcpan.worker
version = attr: wcpan.worker.__version__
description = An asynchronous task queue with priority support.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
author = Wei-Cheng Pan
author_email = legnaleurc@gmail.com
url = https://github.com/legnaleurc/wcpan.worker

[options]
packages = wcpan.worker
namespace_packages = wcpan
python_requires = >=3.8
install_requires =
    wcpan.logger ~= 1.2
